<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id = "@+id/fragment2"
        tools:context=".SecondActivity">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/second_activity"
            android:textSize="50sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="10dp"/>

        <Button
            android:id="@+id/bnToFirst"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/to_first"
            app:layout_constraintWidth_percent="0.80"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            android:layout_marginTop="50dp"/>

        <Button
            android:id="@+id/bnToThird"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/to_third"
            app:layout_constraintWidth_percent="0.80"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bnToFirst"
            android:layout_marginTop="50dp"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>